<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    tools:context="bit.mike.googlemaps.MapsActivity">

    <Button
        android:id="@+id/setTimeButton"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cleanScreen"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/exit"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/pager"
        app:layout_constraintTop_toTopOf="@+id/pager" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map">

        <TextView
            android:id="@+id/startTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/start_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/speedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/travel_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTimeTitle" />

        <TextView
            android:id="@+id/distanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"
            android:text="@string/distance_travelled"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speedTitle" />

        <TextView
            android:id="@+id/arrivalTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"
            android:text="@string/arrival_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceTitle" />

        <TextView
            android:id="@+id/startTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintBottom_toBottomOf="@+id/startTimeTitle"
            app:layout_constraintEnd_toEndOf="@+id/speedValue"
            app:layout_constraintTop_toTopOf="@+id/startTimeTitle" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintBottom_toBottomOf="@+id/speedTitle"
            app:layout_constraintEnd_toEndOf="@+id/distanceValue"
            app:layout_constraintTop_toTopOf="@+id/speedTitle" />

        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintBottom_toBottomOf="@+id/distanceTitle"
            app:layout_constraintEnd_toEndOf="@+id/endTimeValue"
            app:layout_constraintTop_toTopOf="@+id/distanceTitle" />

        <TextView
            android:id="@+id/endTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:layout_constraintBottom_toBottomOf="@+id/arrivalTimeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arrivalTimeTitle"
            app:layout_constraintTop_toTopOf="@+id/arrivalTimeTitle" />

    </android.support.constraint.ConstraintLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="480dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="bit.mike.googlemaps.MapsActivity"></fragment>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:id="@+id/startLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/start_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/setTimeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/right"
        app:layout_constraintBottom_toBottomOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:scaleType="fitCenter"
        android:src="@drawable/left"
        app:layout_constraintBottom_toBottomOf="@+id/rightArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rightArrow" />

</android.support.constraint.ConstraintLayout>

